<resources>
    <string name="app_name">URGlobalAppAPI19</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="what_is_URG">1. What is UR Global?</string>
    <string name="what_is_URG_msg">UR Global is University Residences program for first-year international students who live on campus. Our program connects them to on-campus resources and organize free events throughout the semester. </string>
    <string name="what_is_URG_mission">Our mission is to help first-year international students transition from their home culture to the American way of life through: </string>
    <string name="bullet1"> Social and educational events throughout the year </string>
    <string name="bullet2"> Offer unique opportunities to make new friends </string>
    <string name="bullet3"> Connect them to Purdue resources </string>

    <string name="what_is_pes">2. What is a Peer Educator?</string>
    <string name="what_is_pes_msg">Peer Educators are the mentors and leaders in UR Global. In order to qualify, they must study at Purdue for at least one semester and maintain a minimum of  a 2.5 GPA.</string>
    <string name="pes_expect">Peer Educators are expected to:</string>
    <string name="pes_req1"> Participate in UR Global events and mentor new international students </string>
    <string name="pes_req2"> Undergo a leadership training program </string>

    <string name="what_are_benefits">3. What are the benefits?</string>
    <string name="benefit1">Develop leadership skills</string>
    <string name="benefit2">Opportunity to meet Purdue administrator</string>
    <string name="benefit3">Free attendance to all UR Global events</string>
    <string name="benefit4">Opportunities to connect with Purdue alumni</string>
    <string name="benefit5">Develop your skills set and strengthen your resume</string>
    <string name="benefit6">Gain cross-cultural skills</string>
    <string name="benefit7">Make new friends and get the most of our your Purdue experience!</string>

    <string name="our_stories">4. Our Stories?</string>
    <string name="our_stories_msg">Past and current Peer Educators have gone on to do amazing things at Purdue. Some examples include:</string>
    <string name="example1">Acceptance into professional programs;</string>
    <string name="example2">Summer internships;</string>
    <string name="example3">Study Abroad programs;</string>
    <string name="example4">Jobs, including Resident Assistant (R.A.)</string>
    <string name="example5">BGR/BGRi Leaders</string>

    <string name="more_info"> For more information, click below and visit our Facebook page</string>

    <string name="EventTitle1">Trip to Six Flags</string>
    <string name="EventTitle2">UR Global - Global Games</string>

    <string name="description">Saturday, Oct. 29, 2016</string>
    <string name="description_a">One of the events that student anticipated the most as it is one of the biggest events that UR Global do annually.</string>
    <string name="description_b">Peer educators gained leadership experience by leading students around the park.</string>
    <string name="description_c">Everyone had fun and get to know each other better after getting on crazy rides.</string>
    <string name="description_d">It is only 50$ including transportation, ticket and food! Even cheaper for peer educators!</string>
    <string name="description_e">AWESOME!</string>

    <string name="Global_desp1">Time: 6th November 17:00\-19:00</string>
    <string name="Global_desp2">Location: Vawter Media Room in Windsor Hall (entrance opposite Starbucks on 3rd street)</string>
    <string name="Global_desp3">Hi Students,</string>
    <string name="Global_desp4">We have our next event this coming Sunday,
        Nov 6th from 5-7 pm at the Vawter Media Room in Windsor Hall (entrance opposite Starbucks on 3rd street). </string>
    <string name="Global_desp5">We will be hosting all of Purdue\'s Cultural centers in the cozy setting of
        the Vawter room. We will be playing fun games and there will be food!!</string>
    <string name="Global_desp6">If you plan on attending, please make sure to confirm here</string>

    <string name="link">https://purdue.qualtrics.com/jfe/form/SV_b1xC6IkaF7fpQSp</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>

    <string name="menu_event">Upcoming Events</string>

    <string name="notification_demo">Notification Demo</string>

    <string name="menu_register">Register</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
