<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.purdue.rteoyiiw.urglobalappapi19.AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/info_photo_n"
                android:scaleType="fitXY">
            </ImageView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_URG"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_URG_msg"
                android:layout_marginTop="5dp">
             </TextView>

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_URG_mission"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_pes"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_pes_msg"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pes_expect"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pes_req1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pes_req2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_are_benefits"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit6"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefit7"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_stories"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_stories_msg"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">
            </TextView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>